# Quantum-Computer-Simulation

./: .gitignore  LICENSE  README.md  quantum.cabal
app/: Main.hs
haskell/app/: Main.hs
haskell/test/: Spec.hs
python/: TestSuite.py  main.py  quantum.py
src/: Lib.hs  QLib.hs
