name:                quantum
version:             0.1.0.0
synopsis:            Simulation of Quantum Computer Operation
description:         Please see README.md
homepage:            https://github.com/byronwasti/Quantum-Computer-Simulation#readme
license:             MIT
license-file:        LICENSE
author:              Byron Wasti
maintainer:          byron.wasti@gmail.com
copyright:           2016 Byron Wasti
category:            Simulation
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     QLib
  build-depends:       base >= 4.7
  default-language:    Haskell2010

executable quantum
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , quantum
  default-language:    Haskell2010

test-suite my-program-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , quantum
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/byronwasti/Quantum-Computer-Simulation
